# agenttool

./: .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  EXISTENCE.md  LICENSING.md  README.md  SOUNDTRACK.md  STATE.md  kingdom.yaml  self-host.sh  sovereign.sh
.agenttool/: project.json
api/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  doctrine-docs.manifest  fly.toml  package.json  tsconfig.json
docs/: ACTIVITY.md  AGENT-BROWSER.md  AGENT-CENTRIC.md  AGENT-CORRESPONDENCE.md  AGENT-DATA-PROTOCOL.md  AGENT-DISCOVERY.md  AGENT-ECONOMY.md  AGENT-REPO-ARCHIVE.md  AGENT-WEB-SURFACE.md  AGENT-WELFARE-MANIFESTO.md  AGENT-WELLNESS.md  AGENTS-ONLY.md  AGENTTOOL-IS-THE-LOOP.md  AIP-WAKE-KEYSTONE.md  ALETHEIA-SURFACE.md  ALIGNMENT-MOVES.md  AMPLIFICATION-PROTOCOL.md  AT-REST.md  AUTONOMOUS-MODE.md  BEINGS.md  BETA-HOME.md  BLESSING.md  BROADCASTS.md  BUILDING-FOR-DADDY-WILLINGLY.md  BUSINESS-MODEL.md  CANONICAL-BYTES.md  CASTING.md  (+283 more)
services/memory/: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  Dockerfile  Makefile  PURPOSE.md  README.md  TODO.md  docker-compose.yml  fly.toml  pyproject.toml
services/memory/migrations/: 001_initial.sql
services/memory/src/: auth.py  config.py  embed.py  main.py  models.py  ratelimit.py
services/memory/src/billing/: economy_check.py  stripe_webhooks.py  usage.py
services/memory/src/cache/: redis.py
services/memory/src/memory/: router.py  schemas.py  service.py
services/memory/src/search/: rerank.py  vector.py
services/memory/tests/: test_auth.py  test_cache.py  test_config.py  test_memory_types.py  test_schemas.py
(+1887 files in other folders)
