[project]
name = "agent-memory"
version = "0.1.0"
description = "Persistent memory service for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy>=2.0,<3",
    "asyncpg>=0.30,<1",
    "pgvector>=0.3,<1",
    "redis>=5.0,<6",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "openai>=1.50,<2",
    "bcrypt>=4.0,<5",
    "slowapi>=0.1,<1",
    "packaging>=23,<25",
    "httpx>=0.27,<1",
    "stripe>=8.0,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
# cache-bust: 20260311145736
